samples/_failures_safe/1761078205_ee4189_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee7254d3.c: In function ‘main’:
./samples/SAFE/__tmp_ee7254d3.c:179:5: error: expected declaration or statement at end of input
  179 |     } while (j < token_count);
      |     ^
